💾🌃 Updated with Glitch - add attributions to card photos

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                   consequat.
                 </p>
               </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <span>Photo by <a href="https://unsplash.com/photos/4xv3lqnanYc">Joe Gardner</a> on <a href="https://unsplash.com/">Unsplash</a></span>
+                </p>
+              </footer>
             </div>
           </div>
           <div class="column is-one-third-desktop">
@@ -83,6 +88,11 @@
                   consequat.
                 </p>
               </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <span>Photo by <a href="https://unsplash.com/photos/aRpwIMgzQLo">Kitera Dent</a> on <a href="https://unsplash.com/">Unsplash</a></span>
+                </p>
+              </footer>
             </div>
           </div>
           <div class="column is-one-third-desktop">
@@ -100,6 +110,11 @@
                   consequat.
                 </p>
               </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <span>Photo by <a href="https://unsplash.com/photos/xgMLOaMytUc">Mark Boss</a> on <a href="https://unsplash.com/">Unsplash</a></span>
+                </p>
+              </footer>
             </div>
           </div>
           <div class="column is-one-third-desktop">
@@ -117,6 +132,11 @@
                   consequat.
                 </p>
               </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <span>Photo by <a href="https://unsplash.com/photos/LNrxP3CWEiQ">Vidar Nordli-Mathisen</a> on <a href="https://unsplash.com/">Unsplash</a></span>
+                </p>
+              </footer>
             </div>
           </div>
           <div class="column is-one-third-desktop">
@@ -134,6 +154,11 @@
                   consequat.
                 </p>
               </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <span>Photo by <a href="https://unsplash.com/photos/llEjCH71E9o">Dave Hoefler</a> on <a href="https://unsplash.com/">Unsplash</a></span>
+                </p>
+              </footer>
             </div>
           </div>
           <div class="column is-one-third-desktop">
@@ -151,6 +176,11 @@
                   consequat.
                 </p>
               </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <span>Photo by <a href="https://unsplash.com/photos/3Ts2u53CY_Y">Maksym Diachenko</a> on <a href="https://unsplash.com/">Unsplash</a></span>
+                </p>
+              </footer>
             </div>
           </div>
         </div>
